--- a/.config/i3/config
+++ b/.config/i3/config
@@ -120,9 +120,9 @@ for_window [class=(?i)spotify] focus
 bindsym XF86AudioPause exec --no-startup-id baton pause
 bindsym XF86AudioPrev exec --no-startup-id baton prev
 bindsym XF86AudioNext exec --no-startup-id baton next
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-mute 0 0 && pactl set-sink-volume 0 -5%
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-mute 0 0 && pactl set-sink-volume 0 +5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master on && amixer set Master 5%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master on && amixer set Master 5%+
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 
