--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,24 +1,24 @@
-## Base16 Darktooth
-# Author: Jason Milkins (https://github.com/jasonm23)
+## Base16 Embers
+# Author: Jannik Siebert (https://github.com/janniks)
 #
 # You can use these variables anywhere in the i3 configuration file.
 
-set $base00 #1d2021
-set $base01 #32302f
-set $base02 #504945
-set $base03 #665c54
-set $base04 #928374
-set $base05 #a89984
-set $base06 #d5c4a1
-set $base07 #fdf4c1
-set $base08 #fb543f
-set $base09 #fe8625
-set $base0A #fac03b
-set $base0B #95c085
-set $base0C #8ba59b
-set $base0D #0d6678
-set $base0E #8f4673
-set $base0F #a87322
+set $base00 #16130F
+set $base01 #2C2620
+set $base02 #433B32
+set $base03 #5A5047
+set $base04 #8A8075
+set $base05 #A39A90
+set $base06 #BEB6AE
+set $base07 #DBD6D1
+set $base08 #826D57
+set $base09 #828257
+set $base0A #6D8257
+set $base0B #57826D
+set $base0C #576D82
+set $base0D #6D5782
+set $base0E #82576D
+set $base0F #825757
 
 # Basic bar configuration using the Base16 variables.
 bar {
@@ -45,7 +45,7 @@ client.focused_inactive $base01 $base01 $base05 $base03 $base01
 client.unfocused        $base01 $base00 $base05 $base01 $base01
 client.urgent           $base08 $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+client.background		$base07
 
 # Misc
 set $mod Mod4
