--- a/.config/i3/config
+++ b/.config/i3/config
@@ -126,6 +126,10 @@ bindsym XF86AudioMute exec --no-startup-id blocklet volume mute
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 
+# Emacs anywhere
+bindsym $mod+w exec --no-startup-id $HOME/.emacs_anywhere/bin/run
+for_window [title="(?i)emacs anywhere"] floating enable, move container to workspace 2, focus
+
 # Resize mode
 bindsym $mod+r mode "resize"
 mode "resize" {
