--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,8 +55,9 @@ bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -nb '$bas
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exit
 bindsym $mod+Shift+q kill
-bindsym $mod+Shift+a exec --no-startup-id $HOME/.config/i3/lock.sh
-bindsym $mod+Shift+s exec --no-startup-id $HOME/.config/i3/lock.sh -s
+bindsym $mod+Shift+a exec --no-startup-id $HOME/.config/i3/lock.sh lock
+bindsym $mod+Shift+s exec --no-startup-id $HOME/.config/i3/lock.sh suspend
+bindsym $mod+Shift+d exec --no-startup-id $HOME/.config/i3/lock.sh lock-suspend
 
 # Focus
 bindsym $mod+j focus left
