--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,10 +1,12 @@
 set -g prefix C-t
 unbind C-b
 bind C-t send-prefix
+set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jabirali/tmux-tilish'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g '@tilish-default' 'main-vertical'
 run -b '~/.config/tmux/plugins/tpm/tpm'
