--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,5 +8,6 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jabirali/tmux-tilish'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g '@tilish-default' 'main-vertical'
 run -b '~/.config/tmux/plugins/tpm/tpm'
