Add SSH shortcuts for Git{Hub,Lab}
With this, you can clone via `git clone gh:user/repo`.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,11 @@
+Host gh
+    HostName github.com
+    User git
+
+Host gl
+    HostName gitlab.com
+    User git
+
 Host google
     HostName 35.188.218.82
     User degraafc
