--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,8 @@
+Host *
+    ControlMaster auto
+    ControlPath ~/.ssh/sockets/%r@%h-%p
+    ControlPersist 600
+
 Host gh
     HostName github.com
     User git
