tmux fixups, etc

--- a/.ssh/config
+++ b/.ssh/config
@@ -11,9 +11,9 @@ Host gl
     HostName gitlab.com
     User git
 
-Host google
-    HostName 35.188.218.82
-    User degraafc
+Host ec2
+    HostName 54.161.220.24
+    User ubuntu
 
 Host cyclops
     HostName cyclops.juliacomputing.io
@@ -21,5 +21,4 @@ Host cyclops
 
 Host antarctic
     HostName antarctic.juliacomputing.io
-    ProxyJump cyclops
     User christopher-dG
