--- a/.config/git/config
+++ b/.config/git/config
@@ -6,7 +6,7 @@
   ch = checkout
   cl = clone
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-  p = push origin
+  p = push -u origin
   s = status
 	assume-unchanged = update-index --assume-unchanged
 	assume-changed = update-index --no-assume-unchanged
