Add nanosoldier SSH config, replace tabs with spaces in Git

--- a/.ssh/config
+++ b/.ssh/config
@@ -22,3 +22,8 @@ Host cyclops
 Host antarctic
     HostName antarctic.juliacomputing.io
     User christopher-dG
+
+Host nanosoldier
+    User nanosoldier
+    Hostname nanosoldier5.csail.mit.edu
+    Port 5555
