More SSH configs

--- a/.ssh/config
+++ b/.ssh/config
@@ -27,3 +27,11 @@ Host nanosoldier
     User nanosoldier
     Hostname nanosoldier5.csail.mit.edu
     Port 5555
+
+Host *.csail.mit.edu !jump.csail.mit.edu 128.52.* 128.30.* 128.31.*
+    User degraafc
+    ProxyJump jump.csail.mit.edu
+
+Host btmc
+    User max
+    Hostname osr.btmc.live
