--- a/.ssh/config
+++ b/.ssh/config
@@ -35,3 +35,9 @@ Host *.csail.mit.edu !jump.csail.mit.edu 128.52.* 128.30.* 128.31.*
 Host btmc
     User max
     Hostname osr.btmc.live
+
+Host julia-mac
+    User Julia
+    Hostname fd37:5040::54ac:0818:8bee:aead
+    ProxyJump ec2
+    IdentityFile ~/.ssh/buildbot.pem
