--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -23,11 +23,12 @@ font-1 = source han sans sc
 font-2 = noto color emoji:scale=8
 modules-left = bspwm
 modules-center = playerctl
-modules-right = backlight pulseaudio date onboard
+modules-right = backlight pulseaudio date keyboard
 tray-position = right
 tray-padding = 1
 wm-restack = bspwm
 cursor-click = pointer
+enable-ipc = true
 
 [module/bspwm]
 type = internal/bspwm
@@ -46,7 +47,7 @@ label-empty =
 [module/date]
 type = custom/script
 exec = date "+%a %b %d %I:%M %p"
-interval = 60
+interval = 5
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -57,11 +58,11 @@ click-middle = audio toggle-output
 
 [module/playerctl]
 type = custom/script
-exec = /usr/share/polybar/scripts/player-mpris-simple.sh
+exec = audio now-playing
 interval = 5
-click-left = playerctl previous &
-click-right = playerctl next &
-click-middle = playerctl play-pause &
+click-left = audio play-pause
+click-right = audio next
+click-middle = audio toggle-player
 
 [module/backlight]
 type = custom/script
@@ -70,7 +71,7 @@ interval = 10
 click-left = backlight down
 click-right = backlight up
 
-[module/onboard]
+[module/keyboard]
 type = custom/script
 exec = echo "KBD"
 tail = true
