--- a/.ssh/config
+++ b/.ssh/config
@@ -41,3 +41,8 @@ Host julia-mac
     Hostname fd37:5040::54ac:0818:8bee:aead
     ProxyJump ec2
     IdentityFile ~/.ssh/buildbot.pem
+
+Host pet
+    User ubuntu
+    Hostname cdegraaf.pets.beacon.lol
+    IdentityFile ~/.ssh/cdegraaf-ec2
