--- a/.ssh/config
+++ b/.ssh/config
@@ -1,15 +1,7 @@
 Host *
     ControlMaster auto
-    ControlPath ~/.ssh/sockets/%r@%h-%p
+    ControlPath /tmp/ssh-%r@%h-%p
     ControlPersist 600
-
-Host gh
-    HostName github.com
-    User git
-
-Host gl
-    HostName gitlab.com
-    User git
 
 Host ec2
     HostName 54.161.220.24
@@ -31,10 +23,6 @@ Host nanosoldier
 Host *.csail.mit.edu !jump.csail.mit.edu 128.52.* 128.30.* 128.31.*
     User degraafc
     ProxyJump jump.csail.mit.edu
-
-Host btmc
-    User max
-    Hostname osr.btmc.live
 
 Host julia-mac
     User Julia
