--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 Host *
     ControlMaster auto
     ControlPath /tmp/ssh-%r@%h-%p
-    ControlPersist 600
+    ControlPersist yes
 
 Host ec2
     HostName 54.161.220.24
@@ -34,3 +34,7 @@ Host pet
     User ubuntu
     Hostname cdegraaf.pets.beacon.lol
     IdentityFile ~/.ssh/cdegraaf-ec2
+
+Host ruby
+    User cdg
+    Hostname ruby.local
