Add SSH agent forwarding, remove some hosts I don't use

--- a/.ssh/config
+++ b/.ssh/config
@@ -6,35 +6,20 @@ Host *
 Host ec2
     HostName 54.161.220.24
     User ubuntu
-
-Host cyclops
-    HostName cyclops.juliacomputing.io
-    User christopher-dG
-
-Host antarctic
-    HostName antarctic.juliacomputing.io
-    User christopher-dG
+    ForwardAgent yes
 
 Host nanosoldier
     User nanosoldier
     Hostname nanosoldier5.csail.mit.edu
     Port 5555
 
-Host *.csail.mit.edu !jump.csail.mit.edu 128.52.* 128.30.* 128.31.*
-    User degraafc
-    ProxyJump jump.csail.mit.edu
-
-Host julia-mac
-    User Julia
-    Hostname fd37:5040::54ac:0818:8bee:aead
-    ProxyJump ec2
-    IdentityFile ~/.ssh/buildbot.pem
-
 Host pet
     User ubuntu
     Hostname cdegraaf.pets.beacon.lol
     IdentityFile ~/.ssh/cdegraaf-ec2
+    ForwardAgent yes
 
 Host ruby
     User cdg
     Hostname ruby.local
+    ForwardAgent yes
